Fix button overlap

--- a/less/signup.less
+++ b/less/signup.less
@@ -109,8 +109,8 @@ button {
   border: 2px solid @lightGreen;
   border-radius: 5px;
   color: white;
-  width: 110px;
-  height: 35px;
+  min-width: 110px;
+  min-height: 35px;
   background: @red;
   text-transform: uppercase;
   cursor: pointer;
