--- a/public/index.css
+++ b/public/index.css
@@ -286,8 +286,8 @@ button {
   border: 2px solid #D3EFBD;
   border-radius: 5px;
   color: white;
-  width: 110px;
-  height: 35px;
+  min-width: 110px;
+  min-height: 35px;
   background: #8B2635;
   text-transform: uppercase;
   cursor: pointer;
@@ -398,8 +398,8 @@ button {
   border: 2px solid #D3EFBD;
   border-radius: 5px;
   color: white;
-  width: 110px;
-  height: 35px;
+  min-width: 110px;
+  min-height: 35px;
   background: #8B2635;
   text-transform: uppercase;
   cursor: pointer;
